--- a/snippets/customer-account-common-code.liquid
+++ b/snippets/customer-account-common-code.liquid
@@ -202,7 +202,7 @@
   <div class="hide">
     <form target="shop-frame" accept-charset="UTF-8" id="per-page" action="/contact" class="contact-form" method="post">
       <input name="form_type" type="hidden" value="customer">
-      <input name="utf8" type="hidden" value="✓">
+      <input name="utf8" type="hidden" value="Ă˘ÂÂ">
       <input types="hidden" name="contact[email]" value="{{ customer.email }}"/>
       <input id="update-me" types="hidden" name="contact[tags]" value="" />
       <button type="submit">S</button>
