--- a/snippets/product-grid-item.liquid
+++ b/snippets/product-grid-item.liquid
@@ -3,9 +3,9 @@
 {% assign within_collection = collection_handle |prepend:'/collections/' |append:'/products/' %}
 
 {%if collection %}
-	{% assign href = featured.url | within:collection %}
+  {% assign href = featured.url | within:collection %}
 {% else %}
-	{% assign href = featured.url | replace:'/products/', within_collection %}
+  {% assign href = featured.url | replace:'/products/', within_collection %}
 {% endif %}
 
 {% unless current_collection == blank %}
@@ -66,21 +66,33 @@
         {% unless collection.title == 'All' %}
         {% if product.options.size == 2 %}
           {% for option in product.options_with_values %}
-    		{% if option.name == 'Region' %}
-    		  {% if option.values contains customer_region_tag %}
-        		{% assign region_variant_price_array = '' %}
-        		{% for variant in product.variants %}
-                  {% assign variant_region = variant.title |split:' / ' |last %}
-                  {% if  variant_region == customer_region_tag %}
-        			{% assign variant_price = variant.price |money_without_currency %}
-        			{% assign region_variant_price_array = region_variant_price_array |append:',' |append:variant_price %}
+        {% if option.name == 'Region' %}
+          {% if option.values contains customer_region_tag and collection.title != 'All' %}
+            {% assign region_variant_price_array = '' %}
+            {% for variant in product.variants %}
+                  {% assign variant_region = variant.option2 %}
+                  {% if  variant_region == customer_region_tag and variant.price > 0 %}
+              {% assign variant_price = variant.price |money_without_currency %}
+              {% assign region_variant_price_array = region_variant_price_array |append:',' |append:variant_price %}
                   {% endif %}
-        		{% endfor %}
-        		{% assign region_min_price = region_variant_price_array |remove_first:',' |split:',' |sort |first %}
-<!--         		<script>console.log("{{ region_min_price }}");</script> -->
-        		{% capture price %}${{ region_min_price }}{% endcapture %}
+            {% endfor %}
+            {% assign region_min_price = region_variant_price_array |remove_first:',' |split:',' |sort |first %}
+<!--            <script>console.log("{{ region_min_price }}");</script> -->
+            {% capture price %}${{ region_min_price }}{% endcapture %}
+              {% else %}
+            {% assign region_variant_price_array = '' %}
+            {% for variant in product.variants %}
+                  {% assign variant_region = variant.option2 %}
+                  {% if variant.price > 0 and variant_region == 'Default' or collection.title == 'All' %}
+              {% assign variant_price = variant.price |money_without_currency %}
+              {% assign region_variant_price_array = region_variant_price_array |append:',' |append:variant_price %}
+                  {% endif %}
+            {% endfor %}
+            {% assign region_min_price = region_variant_price_array |remove_first:',' |split:',' |sort |first %}
+<!--            <script>console.log("{{ region_min_price }}");</script> -->
+            {% capture price %}${{ region_min_price }}{% endcapture %}
               {% endif %}
-        	{% endif %}
+          {% endif %}
           {% endfor %}
         {% endif %}
         {% endunless %}
