--- a/layout/theme.liquid
+++ b/layout/theme.liquid
@@ -226,6 +226,26 @@
     {% endif %}
   {% endif %}
   <!-- end of Hits Analytics code -->
+    
+  <!-- BeginConsistentCartAddon -->  <script>  {% if customer %}  Shopify.merge_cart_text = '{{ "consistent_cart_addon.merge_cart_text" | t }}' ;  Shopify.customer_logged_in = true ;  Shopify.customer_email = "{{ customer.email }}" ;  Shopify.log_uuids = true;  {% else %}  Shopify.customer_logged_in = false ;  Shopify.customer_email = "" ;  Shopify.log_uuids = true;  {% endif %}  </script>  <!-- EndConsistentCartAddon -->
+
+  <!--BeginCFFPersistentCartCart-->
+  {% if customer %}
+    <script>
+        window.cffCustomer = {
+            name: '{{customer.name}}',
+            email: '{{customer.email}}',
+            hasAccount: '{{customer.has_account}}',
+            id: '{{customer.id}}'
+        };
+    </script>
+  {% endif %}
+
+  <script>
+      window.cffPCLiquidPlaced = true
+  </script>
+
+  <!--EndCFFPersistentCartCart-->
  </head>
 
 <body id="{{ page_title | handle }}" class="{% if customer %}customer-logged-in {% endif %}template-{{ template | replace: '.', ' ' | truncatewords: 1, '' | handle }}" >
